--- a/app.css
+++ b/app.css
@@ -46,7 +46,7 @@ h1 {
     width: 125px;
     height: 125px;
     background-color: rgb(140, 185, 228);
-    font-size: 3em;
+    font-size: 0;
     margin: auto;
     display: flex;
     align-items: center;
@@ -54,4 +54,8 @@ h1 {
     box-shadow: 2px 2px 10px black;
     border-radius: 5px;
     border: 1px solid black;
+}
+
+.flipped {
+    font-size: 3em;
 }
