--- a/app.css
+++ b/app.css
@@ -1,6 +1,8 @@
 * {
     margin: 0;
     padding: 0;
+    list-style: none;
+
 }
 
 body {
@@ -34,7 +36,6 @@ h1 {
     border: 10px double rgb(117, 19, 93);
     width: 700px;
     height: 700px;
-    list-style: none;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
     box-shadow: 2px 2px 10px black;
@@ -58,4 +59,8 @@ h1 {
 
 .flipped {
     font-size: 3em;
+}
+
+.matched {
+    background-color: rgb(117, 19, 93);
 }
