--- a/app.css
+++ b/app.css
@@ -65,6 +65,11 @@ h1 {
     transform: rotateY(180deg);
 }
 
+.not-matched {
+    background-color: rgb(117, 19, 19);
+
+}
+
 .matched {
     background-color: rgb(117, 19, 93);
 }
