--- a/app.css
+++ b/app.css
@@ -55,7 +55,7 @@ h1 {
     box-shadow: 2px 2px 10px black;
     border-radius: 5px;
     border: 1px solid black;
-    transition: transform .5s, font-size 0.1s;
+    transition: transform .75s, font-size 0.1s;
     transition-delay: 0s, .26s;
 }
 
@@ -66,7 +66,7 @@ h1 {
 
 .not-matched {
     background-color: rgb(117, 19, 19);
-
+    animation: .75s skew;
 }
 
 .matched {
@@ -81,5 +81,11 @@ h1 {
 @keyframes grow {
     50% {
         transform: scale(1.2) rotateY(180deg);
+    }
+}
+
+@keyframes skew {
+    50% {
+        transform: skew(15deg) rotateY(180deg);
     }
 }
