--- a/app.css
+++ b/app.css
@@ -74,6 +74,40 @@ h1 {
     animation: .8s grow;
 }
 
+.modal {
+    display: block;
+    width: 900px;
+    text-align: center;
+    background-color: rgb(142, 146, 198);
+    border: 10px solid rgb(117, 19, 93);
+    box-shadow: 2px 2px 10px black;
+    border-radius: 5px;
+    box-sizing: border-box;
+    padding: 1em;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -60%);
+    font-size: 2em;
+}
+
+.modal p {
+    padding: .75em;
+}
+
+.modal h1 {
+    font-size: 3em;
+    padding-bottom: .25em;
+}
+
+.play-again {
+    background-color: rgb(140, 185, 228);
+    width: 250px;
+    font-size: 1em;
+    margin-top: .65em;
+    padding: .65em 0;
+}
+
 
 
 /* Keyframes */
