--- a/app.css
+++ b/app.css
@@ -89,6 +89,7 @@ h1 {
     left: 50%;
     transform: translate(-50%, -60%);
     font-size: 2em;
+    visibility: hidden;
 }
 
 .modal p {
@@ -108,6 +109,9 @@ h1 {
     padding: .65em 0;
 }
 
+.visible {
+    visibility: visible;
+}
 
 
 /* Keyframes */
