--- a/app.css
+++ b/app.css
@@ -109,6 +109,15 @@ h1 {
     padding: .65em 0;
 }
 
+.play-again:hover {
+    background-color: rgba(117, 19, 93);
+}
+
+.play-again:active {
+    box-shadow: inset -2px -2px 3px rgba(255, 255, 255, .6),
+        inset 2px 2px 3px rgba(0, 0, 0, .6);
+}
+
 .visible {
     visibility: visible;
 }
