--- a/app.css
+++ b/app.css
@@ -140,3 +140,64 @@ h1 {
         transform: skew(15deg) rotateY(180deg);
     }
 }
+
+/* Mobile Media Queries */
+@media screen and (max-width: 400px) {
+    .deck {
+        width: 350px;
+        height: 350px;
+    }
+
+    .card {
+        width: 62.5px;
+        height: 62.5px;
+    }
+
+    .flipped {
+        font-size: 2em;
+    }
+
+    .score-panel {
+        width: 100%;
+        font-size: 1em;
+    }
+
+    h1 {
+        font-size: 3em;
+    }
+
+    .modal {
+        width: 90%;
+        font-size: .75em;
+    }
+}
+
+@media screen and (min-width: 401px) and (max-width: 700px) {
+    .deck {
+        width: 400px;
+        height: 400px;
+    }
+
+    .card {
+        width: 71px;
+        height: 71px;
+    }
+
+    .flipped {
+        font-size: 2em;
+    }
+
+    .score-panel {
+        width: 400px;
+        font-size: 1em;
+    }
+
+    h1 {
+        font-size: 3em;
+    }
+
+    .modal {
+        width: 90%;
+        font-size: .75em;
+    }
+}
